[package]
name = "mptt"
version = "0.0.1"
description = "MPTT"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["macros", "ws"] }
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-modbus = "0.13.1"
tokio-serial = "5.4.4"
tower-http = { version = "0.5.2", features = ["fs"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
